# hyperdriver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ca.yml  ci.yml  publish.yml
arnold/: Cargo.toml
arnold/src/: lib.rs
braid/: Cargo.toml
braid/src/: client.rs  core.rs  duplex.rs  info.rs  lib.rs
braid/src/server/: acceptor.rs  connector.rs  mod.rs
braid/src/tls/: info.rs  mod.rs
braid/src/tls/client/: connector.rs  mod.rs
braid/src/tls/server/: acceptor.rs  connector.rs  info.rs  mod.rs  sni.rs
braid/tests/: duplex.rs  tcp.rs  tls.rs  unix.rs
bridge/: Cargo.toml
bridge/src/: io.rs  lib.rs
examples/: single_threaded.rs
examples/client/: google.rs  hello.rs  httpbin.rs  hurl.rs  profile.rs
examples/server/: h2.rs
hyperdrive/: Cargo.toml
hyperdrive/examples/client/: google.rs  hello.rs
hyperdrive/src/: lib.rs  pidfile.rs
hyperdrive/src/bridge/: rt.rs
hyperdrive/src/client/: mod.rs
hyperdrive/src/client/pool/: checkout.rs
hyperdrive/src/server/: mod.rs
hyperdrive/src/server/conn/: auto.rs
hyperdrive/src/stream/: duplex.rs  mod.rs
hyperdrive/src/stream/server/: acceptor.rs
hyperdrive/src/stream/tls/server/: acceptor.rs
hyperdrive/tests/: client.rs  server.rs
hyperdrive/tests/stream/: duplex.rs  tls.rs  unix.rs
hyperdrive/tests/stream/minica/: minica.pem
hyperdriver/: Cargo.toml
hyperdriver-body/: Cargo.toml
hyperdriver-body/src/: lib.rs
hyperdriver-body/src/service/: adapt.rs  incoming.rs  mod.rs
hyperdriver-client/: Cargo.toml
hyperdriver-client/src/: builder.rs  error.rs  lib.rs  service.rs
hyperdriver-client/src/conn/: connection.rs  dns.rs  mod.rs
hyperdriver-client/src/conn/protocol/: auto.rs  mock.rs  mod.rs
hyperdriver-client/src/conn/stream/: mock.rs  mod.rs  tls.rs
hyperdriver-client/src/conn/transport/: duplex.rs  mock.rs  mod.rs  stream.rs  tcp.rs  tls.rs
hyperdriver-client/src/pool/: checkout.rs  idle.rs  mod.rs
hyperdriver-core/: Cargo.toml
hyperdriver-core/src/: body.rs  lib.rs
hyperdriver-core/src/bridge/: io.rs  rt.rs  service.rs
hyperdriver-core/src/info/: mod.rs  tls.rs
hyperdriver-core/src/service/: mod.rs  option.rs  retry.rs  shared.rs  timeout.rs
hyperdriver-core/src/stream/: core.rs  duplex.rs  mod.rs  tcp.rs  tls.rs  unix.rs
hyperdriver-discovery/: Cargo.toml
hyperdriver-discovery/src/: lib.rs  transport.rs
hyperdriver-server/: Cargo.toml
hyperdriver-server/src/: builder.rs  lib.rs  rewind.rs
hyperdriver-server/src/conn/: acceptor.rs  auto.rs  connecting.rs  info.rs  mod.rs  stream.rs
hyperdriver-server/src/conn/tls/: acceptor.rs  info.rs  mod.rs  sni.rs
hyperdriver/examples/client/: google.rs  hello.rs  httpbin.rs
hyperdriver/examples/server/: h2.rs
hyperdriver/examples/server/minica/localhost/: cert.pem
hyperdriver/src/: lib.rs
hyperdriver/src/bridge/: mod.rs  service.rs
hyperdriver/src/client/: mod.rs
hyperdriver/src/client/clients/: mod.rs
hyperdriver/src/client/conn/: dns.rs  duplex.rs  http.rs  mod.rs  tcp.rs
hyperdriver/src/client/pool/: mock.rs  weakopt.rs
hyperdriver/src/discovery/: mod.rs  server.rs
hyperdriver/src/server/: mod.rs
hyperdriver/src/server/conn/: auto.rs  connecting.rs  mod.rs
hyperdriver/src/stream/: client.rs  core.rs  duplex.rs  info.rs  mod.rs
hyperdriver/src/stream/server/: acceptor.rs  connector.rs  mod.rs
hyperdriver/src/stream/tls/: info.rs  mod.rs
hyperdriver/src/stream/tls/client/: mod.rs
hyperdriver/src/stream/tls/server/: acceptor.rs  connector.rs  mod.rs
hyperdriver/tests/: server.rs
hyperdriver/tests/stream/: duplex.rs  tcp.rs  tls.rs  unix.rs
patron/: Cargo.toml  README.md
patron/examples/: google.rs  hello.rs  httpbin.rs
patron/src/: builder.rs  lazy.rs  lib.rs  pool.rs
patron/src/client/: builder.rs  mod.rs
patron/src/conn/: builder.rs  dns.rs  duplex.rs  http.rs  mod.rs  tcp.rs
patron/src/pool/: checkout.rs  idle.rs  key.rs  mod.rs  weakopt.rs
patron/tests/: client.rs
pidfile/: Cargo.toml
pidfile/src/: lib.rs
platter/: Cargo.toml  README.md
platter/examples/: h2.rs
platter/examples/minica/: minica.pem
platter/src/: connecting.rs  lib.rs  rewind.rs
platter/src/conn/: auto.rs  connecting.rs  mod.rs
platter/tests/: server.rs
roomservice/: Cargo.toml
roomservice/src/: lib.rs  server.rs
src/: body.rs  happy_eyeballs.rs  lazy.rs  lib.rs  notify.rs  pidfile.rs
src/body/: adapt.rs  mod.rs
src/bridge/: io.rs  mod.rs  rt.rs  service.rs
src/client/: builder.rs  error.rs  mod.rs  service.rs  stream.rs
src/client/clients/: builder.rs  mod.rs
src/client/conn/: connection.rs  connector.rs  dns.rs  duplex.rs  http.rs  mod.rs  tcp.rs  tls.rs
src/client/conn/connection/: info.rs  mod.rs  notify.rs
src/client/conn/protocol/: auto.rs  http.rs  info.rs  mock.rs  mod.rs  notify.rs
src/client/conn/stream/: mock.rs  mod.rs  tls.rs
src/client/conn/transport/: duplex.rs  mock.rs  mod.rs  stream.rs  tcp.rs  tls.rs  unix.rs
src/client/pool/: checkout.rs  idle.rs  key.rs  mock.rs  mod.rs  service.rs  weakopt.rs
src/client/service/: future.rs  middleware.rs  mod.rs
src/discovery/: mod.rs  transport.rs
src/info/: mod.rs  tls.rs
src/server/: builder.rs  mod.rs
src/server/conn/: acceptor.rs  auto.rs  connecting.rs  drivers.rs  info.rs  mod.rs  stream.rs
src/server/conn/tls/: acceptor.rs  info.rs  mod.rs  sni.rs
src/server/service/: http.rs  mod.rs
src/service/: adapt.rs  client.rs  error.rs  host.rs  http.rs  incoming.rs  make.rs  mod.rs  option.rs  retry.rs  serviceref.rs  shared.rs
src/stream/: client.rs  core.rs  duplex.rs  info.rs  mod.rs  tcp.rs  tls.rs  unix.rs
src/stream/server/: acceptor.rs  connector.rs  mod.rs
src/stream/tls/: mod.rs
tests/: client.rs  httpbin.rs  public-api.rs  public-api.txt  server.rs  tls.rs  upgrades.rs
tests/client/: connector.rs  custombody.rs  unix.rs
tests/minica/example.com/: cert.pem  key.pem
tests/server/: custombody.rs  graceful.rs
tests/stream/: duplex.rs  tcp.rs  tls.rs  unix.rs
(+8 files in other folders)
