[workspace]
members = ["hyperdriver-*", "hyperdriver"]
resolver = "2"

[workspace.package]
version = "0.5.5"
edition = "2021"
description = "The missing middle for Hyper - Servers and Clients with ergonomic APIs"
license = "MIT"
repository = "https://github.com/alexrudy/hyperdriver"
documentation = "https://docs.rs/hyperdriver"
rust-version = "1.74"
readme = "README.md"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
keywords = ["hyper", "http", "client", "server", "async"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[workspace.dependencies]
axum = "0.7"
bytes = "1"
camino = { version = "1", default-features = false }
clap = { version = "4.5.8" }
color-eyre = "0.6"
dashmap.version = "6"
futures-core = "0.3"
futures-util = "0.3"
http = { version = "1" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
humantime-serde = { version = "1.1.1" }
hyper = { version = "1", features = ["full"] }
libc = { version = "0.2" }
ouroboros = { version = "0.18" }
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
pin-project = { version = "1" }
rustls-native-certs = { version = "0.7.1" }
serde = { version = "1" }
socket2 = { version = "0.5" }
static-assertions = { version = "1", package = "static_assertions" }
tempfile = "3"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tower-service.version = "0.3"                                        # This is compatible with tower 0.4
tower-layer.version = "0.3"                                          # This is compatible with tower 0.4
tracing = { version = "^0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots.version = "0.26"

[workspace.dependencies.rustls]
version = "0.23"
features = ["tls12"]
default-features = false

[workspace.dependencies.tokio-rustls]
version = "0.26"
features = ["tls12"]
default-features = false

[workspace.dependencies.tower]
version = "0.4"
features = ["make", "util"]
default-features = false

[workspace.dependencies.tower-http]
version = "0.5.2"
features = ["follow-redirect", "set-header", "trace"]
default-features = false
