[package]
name = "arnold"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
http-body.workspace = true
http-body-util.workspace = true
http.workspace = true
pin-project.workspace = true
hyper = { workspace = true, optional = true }

[dev-dependencies]
static-assertions.workspace = true

[features]
default = []
docs = ["dep:hyper"]
