[package]
name = "braid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
futures-core.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["full"] }
pin-project.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-rustls.workspace = true
tower.workspace = true
tracing.workspace = true

[dependencies.hyper-util]
workspace = true
features = ["client", "client-legacy", "tokio"]

[dev-dependencies]
futures-util.workspace = true
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
