[package]
name = "braid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["full"] }
pin-project.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-rustls.workspace = true
tower.workspace = true
tracing.workspace = true


[dev-dependencies]
futures-util.workspace = true
pem-rfc7468.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
default = []
connector = []
sni = []
