[package]
name = "hyperdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arnold = { path = "../arnold" }
braid = { path = "../braid" }
patron = { path = "../patron" }
platter = { path = "../platter" }
roomservice = { path = "../roomservice" }

[features]
default = []
incoming = ["arnold/incoming"]
