[package]
name = "hyperdriver-core"
version.workspace = true
edition.workspace = true
description = "Unifying body type for use with Hyper and Axum"
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bytes.workspace = true
camino.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
hyper.workspace = true
pin-project.workspace = true
tokio.workspace = true
rustls = { workspace = true, optional = true }

[dependencies.tower]
workspace = true
features = ["retry"]

[dev-dependencies]
tempfile.workspace = true
static-assertions.workspace = true
webpki-roots.workspace = true
http-body-util.workspace = true

[features]
default = ["client", "stream", "server"]
client = []
docs = []
server = []
stream = []
tls = ["rustls/std"]

[package.metadata.cargo-udeps.ignore]
normal = ["rustls"] # used by tls+server and tls+client features, but not alone
