[package]
name = "hyperdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
bytes.workspace = true
camino = { workspace = true, features = ["serde1"] }
dashmap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
humantime-serde.workspace = true
hyper = { workspace = true }
libc.workspace = true
ouroboros.workspace = true
pin-project.workspace = true
rustls-native-certs.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
socket2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls.workspace = true
tower = { workspace = true, features = ["util", "make"] }
tracing.workspace = true

[dev-dependencies]
static-assertions.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[features]
default = []
docs = []
incoming = []

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
