[package]
name = "hyperdriver"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true


[dependencies]
bytes.workspace = true
camino = { workspace = true, default-features = false }
dashmap = { workspace = true, optional = true }
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
humantime-serde = { workspace = true, optional = true }
hyper = { workspace = true, features = ["full"] }
hyperdriver-body = { path = "../hyperdriver-body" }
hyperdriver-core = { path = "../hyperdriver-core" }
hyperdriver-client = { path = "../hyperdriver-client", optional = true }
hyperdriver-server = { path = "../hyperdriver-server", optional = true }
libc = { workspace = true, optional = true }
pin-project.workspace = true
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dependencies.rustls]
workspace = true
features = ["tls12"]
default-features = false
optional = true

[dependencies.tower]
workspace = true
features = ["make", "util"]
default-features = false

[dev-dependencies]
clap.workspace = true
color-eyre.workspace = true
pem-rfc7468 = { workspace = true, features = ["alloc"] }
static-assertions = { workspace = true }
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki-roots.workspace = true

[features]
axum = ["hyperdriver-body/axum"]
client = [
    "incoming",
    "dep:thiserror",
    "tower/timeout",
    "tower/retry",
    "hyperdriver-client",
]
default = ["client", "server", "discovery", "stream"]
discovery = [
    "server",
    "client",
    "pidfile",
    "stream",
    "dep:dashmap",
    "hyperdriver-server?/stream",
]
docs = []
incoming = []
mocks = []
pidfile = ["dep:libc"]
serde = ["dep:serde", "camino/serde1", "dep:humantime-serde"]
server = ["dep:hyperdriver-server"]
sni = []
stream = [
    "hyperdriver-client?/stream",
    "hyperdriver-core/stream",
    "hyperdriver-server?/stream",
]
tls = ["hyperdriver-client?/tls", "dep:rustls", "hyperdriver-server?/tls"]
tls-aws-lc = ["rustls/aws_lc_rs"]
tls-ring = ["rustls/ring"]

[[example]]
name = "google"
path = "../examples/client/google.rs"
required-features = ["client", "tls", "tls-ring"]

[[example]]
name = "hello"
path = "../examples/client/hello.rs"
required-features = ["client", "tls", "tls-ring"]

[[example]]
name = "httpbin"
path = "../examples/client/httpbin.rs"
required-features = ["client", "tls", "tls-ring"]

[[example]]
name = "h2-server"
path = "../examples/server/h2.rs"
required-features = ["server", "tls", "tls-ring"]

[[test]]
name = "stream-duplex"
path = "../tests/stream/duplex.rs"
required-features = ["stream"]

[[test]]
name = "stream-tcp"
path = "../tests/stream/tcp.rs"
required-features = ["stream"]

[[test]]
name = "stream-tls"
path = "../tests/stream/tls.rs"
required-features = ["stream", "tls", "tls-ring"]

[[test]]
name = "stream-unix"
path = "../tests/stream/unix.rs"
required-features = ["stream"]

[[test]]
name = "server"
path = "../tests/server.rs"
required-features = ["server", "client", "stream"]

[[test]]
name = "client"
path = "../tests/client.rs"
required-features = ["server", "client", "stream"]

[[test]]
name = "custom-body"
path = "../tests/server/custombody.rs"
required-features = ["server"]

[[test]]
name = "graceful-shutdown"
path = "../tests/server/graceful.rs"
required-features = ["server"]

[[test]]
name = "httpbin"
path = "../tests/httpbin.rs"
required-features = ["client", "tls", "tls-ring"]

[[test]]
name = "tls"
path = "../tests/tls.rs"
required-features = ["client", "server", "tls", "tls-ring"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[package.metadata.cargo-udeps.ignore]
normal = ["rustls-native-certs", "rustls", "tokio-rustls", "humantime-serde"]

[package.metadata.docs.rs]
all-features = true
