[package]
name = "hyperdriver"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true


[dependencies]
hyperdriver-body = { path = "../hyperdriver-body" }
hyperdriver-core = { path = "../hyperdriver-core" }
hyperdriver-discovery = { path = "../hyperdriver-discovery", optional = true }
hyperdriver-client = { path = "../hyperdriver-client", optional = true }
hyperdriver-server = { path = "../hyperdriver-server", optional = true }
tracing.workspace = true


[dev-dependencies]
clap.workspace = true
color-eyre.workspace = true
pem-rfc7468 = { workspace = true, features = ["alloc"] }
static-assertions = { workspace = true }
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webpki-roots.workspace = true
tokio = { workspace = true, features = ["full"] }
pin-project.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
tower.workspace = true
rustls = { workspace = true, features = ["ring"] }
hyper.workspace = true
bytes.workspace = true
futures-util.workspace = true

[features]
axum = ["hyperdriver-body/axum"]
client = ["incoming", "hyperdriver-client"]
default = ["client", "server", "discovery", "stream"]
discovery = [
    "server",
    "pidfile",
    "hyperdriver-server?/stream",
    "dep:hyperdriver-discovery",
]
docs = []
incoming = []
mocks = []
pidfile = ["dep:hyperdriver-discovery"]
serde = ["hyperdriver-discovery/serde"]
server = ["dep:hyperdriver-server"]
sni = []
stream = [
    "hyperdriver-client?/stream",
    "hyperdriver-core/stream",
    "hyperdriver-server?/stream",
]
tls = ["hyperdriver-client?/tls", "hyperdriver-server?/tls"]

[[example]]
name = "google"
path = "../examples/client/google.rs"
required-features = ["client", "tls"]

[[example]]
name = "hello"
path = "../examples/client/hello.rs"
required-features = ["client", "tls"]

[[example]]
name = "httpbin"
path = "../examples/client/httpbin.rs"
required-features = ["client", "tls"]

[[example]]
name = "h2-server"
path = "../examples/server/h2.rs"
required-features = ["server", "tls"]

[[test]]
name = "stream-duplex"
path = "../tests/stream/duplex.rs"
required-features = ["stream"]

[[test]]
name = "stream-tcp"
path = "../tests/stream/tcp.rs"
required-features = ["stream"]

[[test]]
name = "stream-tls"
path = "../tests/stream/tls.rs"
required-features = ["stream", "tls"]

[[test]]
name = "stream-unix"
path = "../tests/stream/unix.rs"
required-features = ["stream"]

[[test]]
name = "server"
path = "../tests/server.rs"
required-features = ["server", "client", "stream"]

[[test]]
name = "client"
path = "../tests/client.rs"
required-features = ["server", "client", "stream"]

[[test]]
name = "custom-body"
path = "../tests/server/custombody.rs"
required-features = ["server"]

[[test]]
name = "graceful-shutdown"
path = "../tests/server/graceful.rs"
required-features = ["server"]

[[test]]
name = "httpbin"
path = "../tests/httpbin.rs"
required-features = ["client", "tls"]

[[test]]
name = "tls"
path = "../tests/tls.rs"
required-features = ["client", "server", "tls"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[package.metadata.cargo-udeps.ignore]
normal = ["rustls-native-certs", "rustls", "tokio-rustls", "humantime-serde"]

[package.metadata.docs.rs]
all-features = true
