[package]
name = "patron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arnold.workspace = true
braid.workspace = true
bridge.workspace = true
futures-util.workspace = true
http.workspace = true
hyper.workspace = true
pin-project.workspace = true
rustls-native-certs.workspace = true
rustls.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = "*"
clap = "*"
pem-rfc7468.workspace = true
static-assertions.workspace = true
