[package]
name = "pidfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
camino.workspace = true
tracing.workspace = true
tracing-test.workspace = true

[dev-dependencies]
tempfile.workspace = true
