[package]
name = "platter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arnold.workspace = true
braid.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper-util = { workspace = true, features = [
    "server",
    "server-auto",
    "service",
    "http1",
    "http2",
] }
hyper.workspace = true
ouroboros.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tracing.workspace = true
thiserror.workspace = true
