[package]
name = "platter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arnold.workspace = true
braid.workspace = true
bridge.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
ouroboros.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util", "make"] }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
rustls.workspace = true
pem-rfc7468.workspace = true
tracing-subscriber = "*"
patron.workspace = true
tracing-test.workspace = true
