[package]
name = "roomservice"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arnold.workspace = true
braid.workspace = true
camino = { workspace = true, features = ["serde1"] }
dashmap.workspace = true
futures-util.workspace = true
humantime-serde.workspace = true
http.workspace = true
hyper.workspace = true
patron.workspace = true
pidfile.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
